# crypt-keeper

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  justfile  preview-ansi-colors.sh
cmake/: CompilerOptions.cmake
docs/: releases.md
include/: global.hpp
include/cli/: build_cli.hpp  cli.hpp  types.hpp
include/cmd/: config.hpp  get.hpp  init.hpp  insert.hpp  run_command.hpp
include/commands/: config.hpp  get.hpp  init.hpp
include/lib/: config.hpp  crypto.hpp  types.hpp  wisper.hpp
include/lib/config/: active.hpp  deserialize.hpp  init.hpp  insert_vault.hpp  key_parse.hpp  load.hpp  path.hpp  print.hpp  save.hpp  serialize.hpp  set.hpp  types.hpp
include/lib/crypto/: crypto.hpp  random.hpp  secure_bytes.hpp  types.hpp
include/lib/index/: find.hpp  index.hpp  insert_entry.hpp  serialize.hpp  theme.hpp  types.hpp
include/lib/input/: wisper.hpp
include/lib/mount/: types.hpp
include/lib/secret/: secret.hpp
include/util/: error.hpp  logger.hpp  term.hpp
include/util/logger/: logger.hpp  theme.hpp
include/utils/: messages.hpp
res/: default_config.toml
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  build_cli.cpp  cli.cpp
src/cmd/: CMakeLists.txt  _internal.hpp  chroot.cpp  config.cpp  detail.hpp  get.cpp  init.cpp  insert.cpp  mount.cpp  run_command.cpp  show.cpp  umount.cpp
src/commands/: config.cpp  get.cpp  init.cpp
src/lib/: CMakeLists.txt  config.cpp  crypto.cpp  default_config.hpp.in
src/lib/config/: active.cpp  config.cpp  default.cpp  default.hpp  deserialize.cpp  fio.cpp  init.cpp  insert_vault.cpp  key_parse.cpp  load.cpp  parse_key.cpp  path.cpp  print.cpp  save.cpp  serialize.cpp  set.cpp  write.cpp
src/lib/crypto/: crypto.cpp  fingerprint.cpp  random.cpp
src/lib/fs/: atomic_write.cpp  atomic_write.hpp  sync_dir.cpp  sync_dir.hpp  (+5 more)
src/util/: CMakeLists.txt  logger.cpp
src/utils/: CMakeLists.txt  messages.cpp
tests/: CMakeLists.txt
tests/cmd/: CMakeLists.txt  init_test.cpp
tests/lib/: CMakeLists.txt  config_test.cpp  crypto_test.cpp
tests/util/: gen_key.cpp  gen_key.hpp  scoped_crypt_root.cpp  scoped_crypt_root.hpp  scoped_store_root.cpp  scoped_store_root.hpp  scoped_vault_root.cpp  scoped_vault_root.hpp
tests/utils/: gen_key.cpp  gen_key.hpp
(+63 files in other folders)
